Fix a ton of CSS spacing issues, and refactor all of the flex code

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,6 @@ html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  font-size: 100%;
 }
 
 *, *:before, *:after {
@@ -45,19 +44,11 @@ html {
   box-sizing: inherit;
 }
 
-header {
-  height: 100vh;
-}
-
 body {
   line-height: 1.5;
   font-family: Apercu;
   color: rgba(255,255,255,.75);
   background-color: rgb(25,25,25);
-}
-
-span {
-  font-family:Apercu;
 }
 
 .emoji {
@@ -70,83 +61,88 @@ span {
   background-position: center;
 }
 
-.intro {
+header.intro {
   /* sets the height to 100% of the viewport */
-  /* height: 100vh; */
-  width: 60%;
-  display: inline-flex;
+  height: 100vh;
+  display: flex;
   flex-direction: column;
-  align-items: flex-start;
   border: 3px solid #A18728;
-  font-family:Apercu;
-  font-size: 1.5rem;
+  font-family: Apercu;
+  justify-content: space-between;
+  max-width: 1080px;
 }
 
-.intro h1.intro__hello {
+header.intro h1.intro__hello {
+  display: block;
   margin-left: 100px;
   margin-top: 150px;
-  align-self: stretch;
   border: 3px solid #E18728;
-  width: 55%;
+  max-width: 500px;
+  font-size: 3rem;
 }
 
-.intro h2.intro__paragraph {
-  /* margin: auto; */
-  align-self: stretch;
+header.intro h2.intro__paragraph {
+  display: block;
   font-family:Apercu-Light;
   border: 3px solid #E18728;
   font-weight: 300;
-  width: 80%;
+  max-width: 500px;
   margin-left: 100px;
+  font-size: 1.2rem;
+
 }
 
-.intro.h2.intro__paragraph.name {
+
+header.intro h2.intro__paragraph .name {
   font-family: Apercu-Bold;
-  font-weight: 100;
+  font-weight: 300;
 }
 
-.intro h3.intro__under {
-  align-self: stretch;
+header.intro h3.intro__under {
+  /* align-self: stretch; */
+  display: block;
   font-family: Apercu-Light;
   border: 3px solid #E18728;
   font-weight: 300;
-  width: 70%;
+  max-width: 600px;
   margin-left: 100px;
-  font-size: 1.5rem;
+  margin-bottom: 100px;
+  font-size: 1rem;
 }
 
-.intro h3.intro__under .emoji.snek {
+header.intro h3.intro__under .emoji.snek {
   background-image: url(../images/snek.png);
 }
 
-.intro h3.intro__under .emoji.coffee {
+header.intro h3.intro__under .emoji.coffee {
   background-image: url(../images/coffee.png);
 }
 
-#odometer {
+header.intro #odometer {
   border: 3px solid #E18728;
-  display: inline-flex;
   font-family:Apercu-Light;
-  width: 4%;
-  font-size: 2vw;
-  vertical-align: text;
-
+  max-width: 60px;
 }
 
-.odometer-text {
+header.intro .odometer-text {
   border: 3px solid #E18728;
+}
 
+.section {
+  justify-content: center;
 }
 
 section.aboutme {
-  display: inline-flex;
+  border: 3px solid #E18728;
+  /* position: relative; */
+  display: block;
   font-family:Apercu;
-  flex-direction: column;
   align-items: flex-start;
-  width: 50%;
   margin-left: 100px;
 }
 
 section.aboutme.aboutme__title {
+  border: 3px solid #E18728;
+
   font-size: 2rem;
 }
